creation log 2.txt
In file included from /usr/include/c++/11/bits/stl_algobase.h:71,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from card.h:14,
                 from card.cpp:14:
/usr/include/c++/11/bits/predefined_ops.h: In instantiation of ‘bool __gnu_cxx::__ops::_Iter_equals_val<_Value>::operator()(_Iterator) [with _Iterator = std::_Deque_iterator<card, const card&, const card*>; _Value = const card]’:
/usr/include/c++/11/bits/stl_algobase.h:2069:14:   required from ‘_RandomAccessIterator std::__find_if(_RandomAccessIterator, _RandomAccessIterator, _Predicate, std::random_access_iterator_tag) [with _RandomAccessIterator = std::_Deque_iterator<card, const card&, const card*>; _Predicate = __gnu_cxx::__ops::_Iter_equals_val<const card>]’
/usr/include/c++/11/bits/stl_algobase.h:2114:23:   required from ‘_Iterator std::__find_if(_Iterator, _Iterator, _Predicate) [with _Iterator = std::_Deque_iterator<card, const card&, const card*>; _Predicate = __gnu_cxx::__ops::_Iter_equals_val<const card>]’
/usr/include/c++/11/bits/stl_algo.h:3884:28:   required from ‘_IIter std::find(_IIter, _IIter, const _Tp&) [with _IIter = std::_Deque_iterator<card, const card&, const card*>; _Tp = card]’
card.cpp:138:13:   required from here
/usr/include/c++/11/bits/predefined_ops.h:270:24: error: no match for ‘operator==’ (operand types are ‘const card’ and ‘const card’)
  270 |         { return *__it == _M_value; }
      |                  ~~~~~~^~~~~~~~~~~
In file included from /usr/include/c++/11/bits/stl_algobase.h:67,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from card.h:14,
                 from card.cpp:14:
/usr/include/c++/11/bits/stl_iterator.h:1121:5: note: candidate: ‘template bool __gnu_cxx::operator==(const __gnu_cxx::__normal_iterator<_IteratorL, _Container>&, const __gnu_cxx::__normal_iterator<_IteratorR, _Container>&)’
 1121 |     operator==(const __normal_iterator<_IteratorL, _Container>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/11/bits/stl_iterator.h:1121:5: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/11/bits/stl_algobase.h:71,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from card.h:14,
                 from card.cpp:14:
/usr/include/c++/11/bits/predefined_ops.h:270:24: note:   ‘const card’ is not derived from ‘const __gnu_cxx::__normal_iterator<_IteratorL, _Container>’
  270 |         { return *__it == _M_value; }
      |                  ~~~~~~^~~~~~~~~~~
In file included from /usr/include/c++/11/bits/stl_algobase.h:67,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from card.h:14,
                 from card.cpp:14:
/usr/include/c++/11/bits/stl_iterator.h:1129:5: note: candidate: ‘template bool __gnu_cxx::operator==(const __gnu_cxx::__normal_iterator<_Iterator, _Container>&, const __gnu_cxx::__normal_iterator<_Iterator, _Container>&)’
 1129 |     operator==(const __normal_iterator<_Iterator, _Container>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/11/bits/stl_iterator.h:1129:5: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/11/bits/stl_algobase.h:71,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from card.h:14,
                 from card.cpp:14:
/usr/include/c++/11/bits/predefined_ops.h:270:24: note:   ‘const card’ is not derived from ‘const __gnu_cxx::__normal_iterator<_Iterator, _Container>’
  270 |         { return *__it == _M_value; }
      |                  ~~~~~~^~~~~~~~~~~